syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message ClientMessage {
    int64 firstNumber = 1;
    int64 lastNumber = 2;
}

message ServerMessage {
    int64 number = 1;
}

service Service {
    rpc generateNumber(ClientMessage) returns (stream ServerMessage);
}
